@@ -15,8 +15,10 @@ wajig (2.01) unstable; urgency=low
     fixes LP: #662018
   * BUILD, BUILDDEP: add -y|--yes and -n|--noauth options.
   * AUTOREMOVE: add back after more than one request. (Closes: #590089)
+  * Slightly simplify the build: getting rid of dynamic bash completion
+    generator.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 09 Jan 2011 04:26:32 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 15 Mar 2011 05:11:42 +0200
 
 wajig (2.0.50.1) unstable; urgency=low
 
